# leading-stocks-dashboard

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  data.py  history_store.py  metrics.py  pyproject.toml  requirements.txt  tickers.py
docs/: BACKLOG.md
