[project]
name = "leading-stocks-dashboard"
version = "0.1.0"
description = "Leading stocks dashboard powered by Yahoo Finance"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "requests-cache>=1.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
